Flowmini/flowmini_v23_token_tree_bridge/examples/pass/sum_1_to_n_structured.flow
program sum_1_to_n_structured

main {
    n    : int(stdin.int())
    zero : int(0)
    one  : int(1)
    acc  : int(0)

    while n > zero {
        acc + n -> acc
        n - one -> n
    }

    print acc
}
