Flowmini/flowmini_v23_token_tree_bridge/examples/fail/bad_if_int.flow
program bad_if_int

main {
    x : int(1)

    if x {
        print x
    }
}
